Implement Store as an Actor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 authors = ["Caolan McMahon <caolan.mcmahon@gmail.com>"]
 
 [dependencies]
+futures = "0.1"
 actix-web = "0.6"
 actix = "0.5"
