--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,9 @@ authors = ["Caolan McMahon <caolan.mcmahon@gmail.com>"]
 
 [dependencies]
 warp = "0.1"
+serde_json = "1.0"
+serde_derive = "1.0"
+serde = "1.0"
+
+[dev-dependencies]
+proptest = "0.8"
