--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 authors = ["Caolan McMahon <caolan.mcmahon@gmail.com>"]
 
 [dependencies]
-warp = "0.1"
+# currently depends on https://github.com/seanmonstar/warp/pull/15, which is only in master
+warp = { git = "https://github.com/seanmonstar/warp" }
 serde_json = "1.0"
 serde_derive = "1.0"
 serde = "1.0"
@@ -12,3 +13,4 @@ futures = "0.1"
 
 [dev-dependencies]
 proptest = "0.8"
+http = "0.1"
