--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ authors = ["Caolan McMahon <caolan.mcmahon@gmail.com>"]
 [dependencies]
 hyper = "0.12"
 futures = "0.1"
+serde_derive = "1.0"
+serde = "1.0"
+
+[dev-dependencies]
+proptest = "0.8"
