--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,11 @@ authors = ["Caolan McMahon <caolan.mcmahon@gmail.com>"]
 hyper = "0.12"
 futures = "0.1"
 serde_derive = "1.0"
+serde_json = "1.0"
 serde = "1.0"
 http = "0.1"
+tera = "0.11"
+lazy_static = "1.1"
 
 [dev-dependencies]
 proptest = "0.8"
