--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ sha-1 = "0.7"
 proptest = "0.8"
 tokio = "0.1"
 url = "1.7"
+tokio-tls = "0.2"
+tokio-tungstenite = { git = "git://github.com/snapview/tokio-tungstenite" }
