--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,26 +1,6 @@
-[package]
-name = "tamawiki"
-version = "0.1.0"
-authors = ["Caolan McMahon <caolan.mcmahon@gmail.com>"]
+[workspace]
 
-[dependencies]
-hyper = "0.12"
-futures = "0.1"
-serde_derive = "1.0"
-serde_json = "1.0"
-serde = "1.0"
-http = "0.1"
-tera = "0.11"
-lazy_static = "1.1"
-hyper-staticfile = "0.3"
-serde_urlencoded = "0.5"
-tungstenite = "0.6"
-base64 = "0.9"
-sha-1 = "0.7"
-tokio = "0.1"
-
-[dev-dependencies]
-proptest = "0.8"
-url = "1.7"
-tokio-tls = "0.2"
-tokio-tungstenite = { git = "git://github.com/snapview/tokio-tungstenite" }
+members = [
+    "tamawiki",
+    "tamawiki_test_macros",
+]
