--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "tamawiki"
 version = "0.1.0"
 authors = ["Caolan McMahon <caolan.mcmahon@gmail.com>"]
+build = "build.rs"
 
 [dependencies]
 hyper = "0.12"
@@ -24,3 +25,12 @@ proptest = "0.8"
 url = "1.7"
 tokio-tls = "0.2"
 tokio-tungstenite = { git = "git://github.com/snapview/tokio-tungstenite" }
+
+[build-dependencies]
+quote = "0.6.8"
+syn = "0.15.12"
+proc-macro2 = "0.4.20"
+serde_json = "1.0"
+serde_derive = "1.0"
+serde = "1.0"
+rustfmt = "0.10.0"
