--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,4 +31,6 @@ quote = "0.6.8"
 syn = "0.15.12"
 proc-macro2 = "0.4.20"
 serde_json = "1.0"
+serde_derive = "1.0"
+serde = "1.0"
 rustfmt = "0.10.0"
