--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ before_script:
   - sudo apt-get update -qq
   - sudo apt-get install nodejs -y
   - npm install && npx webpack
+  - rustup component add rustfmt-preview
 script:
+  - cargo fmt --all -- --check
   - cargo build --verbose --all
   - cargo test --verbose --all
 rust:
