--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_script:
   - echo "deb https://deb.nodesource.com/node_8.x trusty main" | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update -qq
   - sudo apt-get install nodejs -y
-  - npm install && npx webpack
+  - npm install && npm run bundle
   - rustup component add rustfmt-preview
 script:
   - cargo fmt --all -- --check
