--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "webpack-cli": "^3.1.2"
     },
     "dependencies": {
-        "@types/codemirror": "0.0.62",
+        "@types/codemirror": "0.0.65",
+        "@types/node": "^10.12.0",
         "codemirror": "^5.40.2"
     },
     "scripts": {
