--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
         "mini-css-extract-plugin": "^0.4.3",
         "mocha": "^5.2.0",
         "optimize-css-assets-webpack-plugin": "^5.0.1",
+        "terser-webpack-plugin": "^1.1.0",
         "ts-loader": "^5.2.1",
         "ts-node": "^7.0.1",
         "tslint": "^5.11.0",
         "typescript": "^3.1.1",
         "typings-for-css-modules-loader": "^1.7.0",
-        "uglifyjs-webpack-plugin": "^2.0.1",
         "webpack": "^4.20.2",
         "webpack-cli": "^3.1.2"
     },
     "dependencies": {
         "@types/codemirror": "0.0.65",
         "@types/node": "^10.12.0",
+        "@webcomponents/custom-elements": "^1.2.1",
         "codemirror": "^5.40.2"
     },
     "scripts": {
