--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
     "private": true,
     "devDependencies": {
         "@types/chai": "^4.1.6",
-        "@types/jsdom": "^12.2.0",
         "@types/mocha": "^5.2.5",
         "chai": "^4.2.0",
         "css-loader": "^1.0.0",
-        "jsdom": "^12.2.0",
+        "fork-ts-checker-webpack-plugin": "^0.4.14",
         "mini-css-extract-plugin": "^0.4.3",
         "mocha": "^5.2.0",
+        "mocha-webdriver-runner": "^0.3.4",
         "optimize-css-assets-webpack-plugin": "^5.0.1",
+        "raw-loader": "^0.5.1",
         "terser-webpack-plugin": "^1.1.0",
         "ts-loader": "^5.2.1",
-        "ts-node": "^7.0.1",
         "tslint": "^5.11.0",
         "typescript": "^3.1.1",
         "typings-for-css-modules-loader": "^1.7.0",
@@ -29,6 +29,6 @@
     "scripts": {
         "bundle": "npx webpack",
         "lint": "npx tslint --project tsconfig.json public/src/_static/js/**/*.ts",
-        "test": "npm run lint && npx ts-node --project tsconfig.json node_modules/.bin/mocha --require ts-node/register public/src/_static/js/tests/test.editor.ts --timeout 10000 --require public/src/_static/js/tests/env.js"
+        "test": "npx webpack --config webpack.test.config && npx mocha-webdriver-runner file:///$PWD/public/test/selenium.html -C moz:firefoxOptions.args='[\"-headless\"]' -C browserName=chrome -C chromeOptions.args='[\"--headless\"]'"
     }
 }
