CI: use latest-esr as travis firefox version

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: rust
 dist: trusty
 sudo: required
 addons:
-  firefox: stable
+  firefox: latest-esr
   chrome: stable
 before_script:
   - curl -sSL https://deb.nodesource.com/gpgkey/nodesource.gpg.key | sudo apt-key add -
