--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "terser-webpack-plugin": "^1.1.0",
         "ts-loader": "^5.2.1",
         "tslint": "^5.11.0",
-        "typescript": "^3.1.1",
+        "typedoc": "^0.13.0",
+        "typedoc-webpack-plugin": "^1.1.4",
+        "typescript": "^3.1.5",
         "typings-for-css-modules-loader": "^1.7.0",
         "webpack": "^4.20.2",
         "webpack-cli": "^3.1.2"
