--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "karma": "^3.1.1",
         "karma-chrome-launcher": "^2.2.0",
         "karma-firefox-launcher": "^1.1.0",
+        "karma-json-preprocessor": "^0.3.3",
         "karma-mocha": "^1.3.0",
-        "karma-typescript": "^3.0.13",
+        "karma-mocha-reporter": "^2.2.5",
+        "karma-typescript": "3.0.8",
         "mini-css-extract-plugin": "^0.4.3",
         "mocha": "^5.2.0",
         "optimize-css-assets-webpack-plugin": "^5.0.1",
