--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "noFallthroughCasesInSwitch": true,
         "resolveJsonModule": true,
         "allowSyntheticDefaultImports": true,
+        "moduleResolution": "node",
         "target": "es2015"
     }
 }
