--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
     "name": "tamawiki",
     "private": true,
     "devDependencies": {
-        "@types/chai": "^4.1.6",
+        "@types/chai": "^4.1.7",
         "@types/mocha": "^5.2.5",
         "chai": "^4.2.0",
-        "css-loader": "^1.0.0",
-        "fork-ts-checker-webpack-plugin": "^0.4.14",
+        "css-loader": "^1.0.1",
+        "ignore-loader": "^0.1.2",
         "karma": "^3.1.1",
         "karma-chrome-launcher": "^2.2.0",
         "karma-firefox-launcher": "^1.1.0",
@@ -14,28 +14,28 @@
         "karma-mocha": "^1.3.0",
         "karma-mocha-reporter": "^2.2.5",
         "karma-typescript": "3.0.8",
-        "mini-css-extract-plugin": "^0.4.3",
+        "mini-css-extract-plugin": "^0.4.4",
         "mocha": "^5.2.0",
         "optimize-css-assets-webpack-plugin": "^5.0.1",
         "raw-loader": "^0.5.1",
         "terser-webpack-plugin": "^1.1.0",
-        "ts-loader": "^5.2.1",
+        "ts-loader": "^5.3.0",
         "tslint": "^5.11.0",
         "typedoc": "^0.13.0",
-        "typedoc-webpack-plugin": "^1.1.4",
-        "typescript": "^3.1.5",
+        "typescript": "^3.1.6",
         "typings-for-css-modules-loader": "^1.7.0",
-        "webpack": "^4.20.2",
+        "webpack": "^4.25.1",
         "webpack-cli": "^3.1.2"
     },
     "dependencies": {
         "@types/codemirror": "0.0.65",
-        "@types/node": "^10.12.0",
+        "@types/node": "^10.12.9",
         "@webcomponents/custom-elements": "^1.2.1",
-        "codemirror": "^5.40.2"
+        "codemirror": "^5.41.0"
     },
     "scripts": {
         "bundle": "npx webpack",
+        "doc": "npx typedoc",
         "lint": "npx tslint --project tsconfig.json public/src/_static/js/*.ts public/src/_static/js/**/*.ts",
         "test": "karma start --single-run --browsers FirefoxHeadless karma.conf.js"
     }
