Add libssl-dev package to .build.yml

--- a/.build.yml
+++ b/.build.yml
@@ -7,6 +7,7 @@ packages:
   - curl
   - nodejs
   - pkg-config
+  - libssl-dev
 tasks:
   - node: |
       curl -sL https://deb.nodesource.com/setup_10.x > node-installer.sh
